--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 
-$primary   : #1976D2;
+$primary   : #0B2559;
 $secondary : #26A69A;
 $accent    : #9C27B0;
 
